# logging-benchmark

./: CMakeLists.txt  README.md
scripts/: plog_logging.py
src/: BenchmarkRunner.cpp  BenchmarkRunner.h  LoggerGlog.h  LoggerModule.h  LoggerSpdlog.h  benchmark.cpp  benchmark.h  main.cpp
